02 Cors config like prod